@@ -14,7 +14,7 @@ buildscript {
 plugins {
     id 'idea'
     id 'net.minecraftforge.gradle' version '6.0.25'
-    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+    id 'org.parchmentmc.librarian.forgegradle' version '1.2.0'
 }
 
 apply plugin: 'org.spongepowered.mixin'
@@ -292,6 +292,8 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
+    annotationProcessor project(':processor')
+    compileOnly project(':processor')
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     implementation 'junit:junit:4.13.2'
 }
@@ -367,6 +369,16 @@ tasks.withType(JavaCompile).configureEach {
 
 tasks.named('compileJava', JavaCompile).configure {
     options.incremental = true
+    options.compilerArgs.add('-Xplugin:suppress-checked-exceptions')
+    options.fork = true
+    options.forkOptions.jvmArgs.addAll([
+            '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+    ])
 }
 
 tasks.named('compileTestJava', JavaCompile).configure {
